@@ -59,6 +59,7 @@ PYJSLIB_BUILTIN_FUNCTIONS=("cmp",
                            "getattr",
                            "setattr",
                            "hasattr",
+                           "delattr",
                            "int",
                            "float",
                            "str",
@@ -74,6 +75,13 @@ PYJSLIB_BUILTIN_FUNCTIONS=("cmp",
                            "max",
                            "bool",
                            "type",
+                           "pow",
+                           "hex",
+                           "oct",
+                           "round",
+                           "divmod",
+                           "all",
+                           "any",
                            "isinstance")
 
 PYJSLIB_BUILTIN_CLASSES=("BaseException",
